--- a/templates/index.html
+++ b/templates/index.html
@@ -138,5 +138,15 @@
   gtag('config', 'UA-23581568-13');
 </script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+<script>
+
+	function predict(geography, creditScore, gender, age, tenure, balance, products, hasCreditCard, isActiveMember, salary) {
+		axios.get('predict', {params: {geography: geography, creditScore:creditScore, gender:gender, age:age, tenure:tenure, balance: balance, products:products, hasCreditCard:hasCreditCard, isActiveMember:isActiveMember, salary:salary}})
+		.then(function(res) {console.log(res.data)});
+	}
+
+</script>
+
 </body>
 </html>
