--- a/templates/index.html
+++ b/templates/index.html
@@ -26,12 +26,12 @@
       <form class="col s12">
         <div class="row">
           <div class="input-field col s4 offset-s2">
-            <input id="last_name" type="text" class="validate">
-            <label for="last_name">Name</label>
+            <input id="name" type="text" class="validate">
+            <label for="name">Name</label>
           </div>
           <div class="input-field col s4">
-            <input id="last_name" type="text" class="validate">
-            <label for="last_name">Customer Id</label>
+            <input id="id" type="text" class="validate">
+            <label for="id">Customer Id</label>
           </div>
         </div>
         <div class="row">
@@ -111,6 +111,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
 	<script>
+
+
 
 		function predict(geography, creditScore, gender, age, tenure, balance, products, hasCreditCard, isActiveMember, salary) {
 			axios.get('predict', {params: {geography: geography, creditScore:creditScore, gender:gender, age:age, tenure:tenure, balance: balance, products:products, hasCreditCard:hasCreditCard, isActiveMember:isActiveMember, salary:salary}})
