--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="email" type="email" class="validate">
-            <label for="email">Credit Score</label>
+            <input id="score" type="email" class="validate">
+            <label for="score">Credit Score</label>
           </div>
         </div>
         <div class="row">
@@ -48,50 +48,50 @@
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="email" type="email" class="validate">
-            <label for="email">Gender</label>
+            <input id="gender" type="email" class="validate">
+            <label for="gender">Gender</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="email" type="email" class="validate">
-            <label for="email">Age</label>
+            <input id="age" type="email" class="validate">
+            <label for="age">Age</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="email" type="email" class="validate">
-            <label for="email">Tenure</label>
+            <input id="tenure" type="email" class="validate">
+            <label for="tenure">Tenure</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="email" type="email" class="validate">
-            <label for="email">Balance</label>
+            <input id="balance" type="email" class="validate">
+            <label for="balance">Balance</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="email" type="email" class="validate">
-            <label for="email">Number of products</label>
+            <input id="products" type="email" class="validate">
+            <label for="products">Number of products</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="email" type="email" class="validate">
-            <label for="email">Has Credit Card</label>
+            <input id="creditCard" type="email" class="validate">
+            <label for="creditCard">Has Credit Card</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="email" type="email" class="validate">
-            <label for="email">Is Active Member</label>
+            <input id="member" type="email" class="validate">
+            <label for="member">Is Active Member</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="email" type="email" class="validate">
-            <label for="email">Estimated Salary</label>
+            <input id="salary" type="email" class="validate">
+            <label for="salary">Estimated Salary</label>
           </div>
         </div>
        <div class="center-align">
