--- a/templates/index.html
+++ b/templates/index.html
@@ -42,13 +42,24 @@
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="email" type="email" class="validate">
-            <label for="email">Geography</label>
+			<input id="email" type="email" class="validate" disabled>
+			<select class="browser-default">
+					<option value="" disabled selected>Choose a country</option>
+					<option value="1">France</option>
+					<option value="2">Germany</option>
+					<option value="3">Spain</option>
+				  </select>
+            <label for="Geography">Geography</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="gender" type="email" class="validate">
+			<input id="gender" type="email" class="validate"disabled>
+			<select class="browser-default">
+					<option value="" disabled selected>Choose a gender</option>
+					<option value="1">Male</option>
+					<option value="2">Female</option>
+				  </select>
             <label for="gender">Gender</label>
           </div>
         </div>
@@ -78,13 +89,23 @@
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="creditCard" type="email" class="validate">
+			<input id="creditCard" type="email" class="validate" disabled>
+			<select class="browser-default">
+					<option value="" disabled selected>Choose an option</option>
+					<option value="1">Yes</option>
+					<option value="2">No</option>
+				  </select>
             <label for="creditCard">Has Credit Card</label>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s8 offset-s2">
-            <input id="member" type="email" class="validate">
+			<input id="member" type="email" class="validate" disabled>
+			<select class="browser-default">
+					<option value="" disabled selected>Choose an option</option>
+					<option value="1">Yes</option>
+					<option value="2">No</option>
+				  </select>
             <label for="member">Is Active Member</label>
           </div>
         </div>
