--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body>
+<body bgcolor="#e1f5fe">
     <!-- navbar -->
     <nav>
       <div class="nav-wrapper">
@@ -116,7 +116,7 @@
           </div>
         </div>
        <div class="center-align">
-          <a href="results.html" class="btn waves-effect waves-light" type="submit" name="action">Submit
+          <a href="results.html" class="btn waves-effect waves-light green accent-3" type="submit" name="action">Submit
               <i class="material-icons right">send</i>
           </a>
        </div>
