--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 
 <body bgcolor="#e1f5fe">
     <!-- navbar -->
+		<div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper">
         <nav class="nav" style="background-color:#00f260">
@@ -18,6 +19,7 @@
           </ul>
       </div>
     </nav>
+	</div>
 
   <div class="divider"></div>
   <div class="section">
@@ -112,11 +114,11 @@
         <div class="row">
           <div class="input-field col s8 offset-s2">
             <input id="salary" type="number" class="validate">
-            <label for="salary">Estimated Salary</label>
+            <label for="salary">Estimated Salary (USD)</label>
           </div>
         </div>
        <div class="center-align">
-          <a href="results.html" class="btn waves-effect waves-light green accent-3" type="submit" name="action">Submit
+          <a href="#" class="btn waves-effect waves-light green accent-3" type="submit" name="action" onclick="submit()">Submit
               <i class="material-icons right">send</i>
           </a>
        </div>
@@ -129,8 +131,65 @@
   <div class="divider"></div>
   <div class="section">
   </div>
+
+	<!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Results</h4>
+      <p id="one"></p>
+			<br>
+			<p>Recommended actions:</p>
+
+			<div class="row">
+	 <div class="col s6 m6">
+		 <div class="card blue-grey darken-1">
+			 <div class="card-content white-text">
+				 <p class="lol">Contact product teams</p>
+			 </div>
+		 </div>
+	 </div>
+	 <div class="col s6 m6">
+		 <div class="card blue-grey darken-1">
+			 <div class="card-content white-text">
+				 <p class="lol">Contact product teams</p>
+			 </div>
+		 </div>
+	 </div>
+ </div>
+ <div class="row">
+<div class="col s6 m6">
+<div class="card blue-grey darken-1">
+	<div class="card-content white-text">
+		<p class="lol">Contact product teams</p>
+	</div>
+</div>
+</div>
+<div class="col s6 m6">
+<div class="card blue-grey darken-1">
+	<div class="card-content white-text">
+		<p class="lol">Contact product teams</p>
+	</div>
+</div>
+</div>
+</div>
+
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
+  </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+
+	<script>
+	var instances
+	document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.modal');
+    instances = M.Modal.init(elems, {});
+  });
+	</script>
+
 	<script>
 
 	function submit() {
@@ -173,7 +232,21 @@
 
 		function predict(location1, location2, creditScore, gender, age, tenure, balance, products, hasCreditCard, isActiveMember, salary) {
 			axios.get('predict', {params: {location1: location1, location2: location2, creditScore:creditScore, gender:gender, age:age, tenure:tenure, balance: balance, products:products, hasCreditCard:hasCreditCard, isActiveMember:isActiveMember, salary:salary}})
-			.then(function(res) {console.log(res.data)});
+			.then(function(res) {
+				console.log(res.data)
+				document.getElementById('one').innerHTML = "The customer's likelyhood of leaving is " + (res.data)*100 + "%.";
+
+				if(res.data < 0.5) {
+					var arr = document.getElementsByClassName('lol');
+					for (var i=0;i<arr.length;i++) {
+						arr[i].style.textDecoration = 'line-through';
+					}
+				} else {
+					arr[i].style.textDecoration = '';
+				}
+
+				instances[0].open();
+			});
 		}
 
 	</script>
