--- a/templates/index.html
+++ b/templates/index.html
@@ -138,37 +138,49 @@
       <h4>Results</h4>
       <p id="one"></p>
 			<br>
-			<p>Recommended actions:</p>
+			<p>Required actions:</p>
 
 			<div class="row">
 	 <div class="col s6 m6">
-		 <div class="card blue-grey darken-1">
+		 <div class="card green">
 			 <div class="card-content white-text">
 				 <p class="lol">Contact product teams</p>
 			 </div>
+			 <div class="card-action">
+          <a class="lolz"></a>
+        </div>
 		 </div>
 	 </div>
 	 <div class="col s6 m6">
-		 <div class="card blue-grey darken-1">
+		 <div class="card green">
 			 <div class="card-content white-text">
-				 <p class="lol">Contact product teams</p>
+				 <p class="lol">Targeted advertising on social media</p>
 			 </div>
+			 <div class="card-action">
+          <a class="lolz"></a>
+        </div>
 		 </div>
 	 </div>
  </div>
  <div class="row">
 <div class="col s6 m6">
-<div class="card blue-grey darken-1">
+<div class="card green">
 	<div class="card-content white-text">
-		<p class="lol">Contact product teams</p>
+		<p class="lol">Send customer service email</p>
 	</div>
+	<div class="card-action">
+		 <a class="lolz"></a>
+	 </div>
 </div>
 </div>
 <div class="col s6 m6">
-<div class="card blue-grey darken-1">
+<div class="card green">
 	<div class="card-content white-text">
-		<p class="lol">Contact product teams</p>
+		<p class="lol">Offer promotions</p>
 	</div>
+	<div class="card-action">
+		 <a class="lolz"></a>
+	 </div>
 </div>
 </div>
 </div>
@@ -193,6 +205,8 @@
 	<script>
 
 	function submit() {
+
+		alert('Please wait...')
 
 		var creditScore = parseInt(document.getElementById('score').value);
 		var age = parseInt(document.getElementById('age').value);
@@ -234,15 +248,24 @@
 			axios.get('predict', {params: {location1: location1, location2: location2, creditScore:creditScore, gender:gender, age:age, tenure:tenure, balance: balance, products:products, hasCreditCard:hasCreditCard, isActiveMember:isActiveMember, salary:salary}})
 			.then(function(res) {
 				console.log(res.data)
-				document.getElementById('one').innerHTML = "The customer's likelyhood of leaving is " + (res.data)*100 + "%.";
+				document.getElementById('one').innerHTML = "The customer's likelyhood of leaving is " + ((res.data)*100).toFixed(2) + "%.";
 
 				if(res.data < 0.5) {
 					var arr = document.getElementsByClassName('lol');
+					var arr2 = document.getElementsByClassName('lolz')
 					for (var i=0;i<arr.length;i++) {
 						arr[i].style.textDecoration = 'line-through';
 					}
+					for (var i=0;i<arr2.length;i++) {
+						arr2[i].innerHTML = 'Not required';
+					}
 				} else {
-					arr[i].style.textDecoration = '';
+					for (var i=0;i<arr.length;i++) {
+						arr[i].style.textDecoration = '';
+					}
+					for (var i=0;i<arr2.length;i++) {
+						arr2[i].innerHTML = 'Required';
+					}
 				}
 
 				instances[0].open();
